debezium/dbz#2101 Address review feedback for host-mode pipeline lifecycle
Signed-off-by: divyanshu_Kumar <154233802+d1vyanshu-kumar@users.noreply.github.com>